...
            android:layout_marginTop="@dimen/keyline_2"
            android:text="@string/ad_blocking_disabled_secondary_action"
            app:daxButtonSize="large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/adBlockingDisabledPrimaryButton"
            tools:text="Cancel" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>

