<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2022 Revenge
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:paddingStart="@dimen/keyline_4"
    android:paddingTop="@dimen/keyline_5"
    android:paddingEnd="@dimen/keyline_4"
    android:paddingBottom="@dimen/keyline_5">

    <com.duckduckgo.common.ui.view.listitem.SectionHeaderListItem
        android:id="@+id/label"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:primaryText="Search Bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.duckduckgo.common.ui.view.SearchBarView
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label"
        app:searchHint="Search" />

</androidx.constraintlayout.widget.ConstraintLayout>