...
    val omnibarType: OmnibarType
    var isScrollingEnabled: Boolean
    var isUiLocked: Boolean
    val isEditing: Boolean
    val isEditingFlow: Flow<Boolean>
    val findInPage: IncludeFindInPageBinding
    val omnibarTextInput: KeyboardAwareEditText
    val omniBarContainer: View
    val toolbar: Toolbar
    val shieldIcon: LottieAnimationView
    val daxIcon: ImageView
    fun setOmnibarTextListener(textListener: TextListener)
    fun setOmnibarItemPressedListener(itemPressedListener: ItemPressedListener)
...
