<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2026 DuckDuckGo
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/popup_menu_bg"
    android:orientation="vertical">

    <com.duckduckgo.common.ui.view.PopupMenuItemView
        android:id="@+id/bookmark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leadingIcon="@drawable/ic_bookmark_24"
        app:primaryText="Bookmark" />

    <com.duckduckgo.common.ui.view.PopupMenuItemView
        android:id="@+id/copyLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:primaryText="Copy link"
        app:trailingIcon="@drawable/ic_copy_24" />

    <com.duckduckgo.common.ui.view.PopupMenuItemView
        android:id="@+id/unavailable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:primaryText="Unavailable" />

    <com.duckduckgo.common.ui.view.PopupMenuItemView
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:primaryText="Delete"
        app:primaryTextType="destructive" />

</LinearLayout>
