...
    override val secondaryText: DaxTextView
        get() = binding.secondaryText
    override val leadingIcon: ImageView
        get() = binding.leadingIcon
    override val leadingIconContainer: View
        get() = binding.leadingIconBackground
    override val trailingIcon: ImageView
        get() = binding.trailingIcon
    override val trailingIconContainer: View
        get() = binding.trailingIconContainer
    override val trailingSwitch: DaxSwitch
        get() = binding.trailingSwitch
    override val yellowPill: DaxYellowPill?
...
    override val itemContainer: View
        get() = binding.itemContainer

    override val verticalPadding: Int
        get() = R.dimen.twoLineItemVerticalPadding

    val favoriteStar: ImageView?
        get() = binding.favoriteStar

    /** Sets the favorite star visibility */
    fun setFavoriteStarVisible(isVisible: Boolean) {
        if (isVisible) {
            favoriteStar?.show()
...
