...
        const val FIRE_BUTTON_RETRIEVE = "https://privacy-test-pages.site/privacy-protections/storage-blocking/?retrive"
        const val COOKIES_3P_STORE = "https://privacy-test-pages.site/privacy-protections/storage-blocking/?store"
        const val COOKIES_3P_RETRIEVE = "https://privacy-test-pages.site/privacy-protections/storage-blocking/?retrive"
        const val GPC = "https://privacy-test-pages.site/privacy-protections/gpc/?run"
        const val GPC_OTHER = "https://global-privacy-control.glitch.me/"
        const val SURROGATES = "https://privacy-test-pages.site/privacy-protections/surrogates/"
        val domainsUsed = listOf("privacy-test-pages.site", "privacy-test-pages.site")
    }
}

