...

    private var bottomOmnibar: OmnibarLayout? = null
    private var gravity: Int? = null
    private var trackers: DaxTextView? = null
    private var website: DaxTextView? = null
    private var trackersBurstAnimationView: LottieAnimationView? = null
    private var browserLayout: View? = null

    override fun layoutDependsOn(parent: CoordinatorLayout, child: View, dependency: View): Boolean {
        // Avoid any unnecessary operations. Hide the child if it's visible on new tab (the browser layout is gone or scrolling is disabled).
        if (child.isVisible && (browserLayout?.isGone == true || bottomOmnibar?.isOmnibarScrollingEnabled() == false)) {
            child.hide()
            return false
...
