...

@ContributesBinding(scope = ActivityScope::class)
class RealNewTabPageProvider @Inject constructor(
    private val newTabPageVersions: ActivePluginPoint<NewTabPagePlugin>,
) : NewTabPageProvider {
    override fun provideNewTabPageVersion(): Flow<NewTabPagePlugin> = flow {
        val newTabPage = newTabPageVersions.getPlugins().firstOrNull() ?: NewTabPage()
        emit(newTabPage)
    }
}

@ContributesActivePlugin(
    scope = AppScope::class,
...
