...
    protected val iconsContainer: View by lazy { findViewById(R.id.iconsContainer) }
    protected val shieldIconPulseAnimationContainer: View by lazy { findViewById(R.id.shieldIconPulseAnimationContainer) }
    protected val omniBarContentContainer: View by lazy { findViewById(R.id.omniBarContentContainer) }
    protected val backIcon: ImageView by lazy { findViewById(R.id.backIcon) }
    protected val customTabToolbarContainerWrapper: ViewGroup by lazy { findViewById(R.id.customTabToolbarContainerWrapper) }
    protected val leadingIconContainer: View by lazy { findViewById(R.id.omnibarIconContainer) }
    protected val duckAIHeader: View by lazy { findViewById(R.id.duckAIHeader) }
    protected val duckAISidebar: View by lazy { findViewById(R.id.duckAiSidebar) }
    val findInPage: IncludeFindInPageBinding by lazy {
        IncludeFindInPageBinding.bind(findViewById(R.id.findInPage))
    }
    val omnibarTextInput: KeyboardAwareEditText by lazy { findViewById(R.id.omnibarTextInput) }
    protected val tabsMenu: TabSwitcherButton by lazy { findViewById(R.id.tabsMenu) }
...
