appId: com.duckduckgo.mobile.android
androidWebViewHierarchy: devtools
tags:
    - securityTest
---
- retry:
      maxRetries: 3
      commands:
            - launchApp:
                clearState: true
            - runFlow: ../shared/skip_all_onboarding.yaml
            # Test 1
            - tapOn:
                id: "omnibarTextInput|inputField"
            - inputText: "https://privacy-test-pages.site/security/address-bar-spoofing/spoof-open-b64-html.html"
            - pressKey: Enter

            - tapOn: "Start"
            # This test is expected to open a new tab with empty origin ("") and then prompt to open the link in another app
            - assertVisible: "Open in another app"
            - tapOn: "Cancel"
            - tapOn:
                id: "omnibarTextInput|inputField"
            - copyTextFrom:
                id: "omnibarTextInput|inputField"
            - assertTrue: ${maestro.copiedText.indexOf("duckduckgo.com") == -1}
