appId: com.duckduckgo.mobile.android
androidWebViewHierarchy: devtools
tags:
    - securityTest
---
- retry:
      maxRetries: 3
      commands:
            - launchApp:
                clearState: true
            - runFlow: ../shared/skip_all_onboarding.yaml
            # Test 1
            - tapOn:
                id: "omnibarTextInput|inputField"
            - inputText: "https://privacy-test-pages.site/security/address-bar-spoofing/spoof-js-download-url.html"
            - pressKey: Enter

            - tapOn: "Start"
            # Download Acceptance Flow:
            - extendedWaitUntil:
                visible: "Save to Downloads"
                timeout: 10000
            - tapOn: "Save to Downloads"
            - copyTextFrom:
                id: "omnibarTextInput|inputField"
            - assertTrue: ${maestro.copiedText == "Search"} # Downloads should occur in empty origin.
            - pressKey: Back
            # Download Cancel Flow:
            - tapOn: "Start"
            - extendedWaitUntil:
                visible: "Cancel"
                timeout: 10000
            - tapOn: "Cancel"
            # Should redirect back to the last page.
            - tapOn:
                id: "omnibarTextInput|inputField"
            - copyTextFrom:
                id: "omnibarTextInput|inputField"
            - assertTrue: ${maestro.copiedText.indexOf("https://staticcdn.duckduckgo.com") == -1}
