appId: com.duckduckgo.mobile.android
name: "ReleaseTest: Multiple tabs can be opened"
tags:
    - releaseTest
---
- retry:
      maxRetries: 3
      commands:
            - launchApp:
                  clearState: true
                  stopApp: true

            - runFlow: ../shared/skip_all_onboarding.yaml

            - assertVisible:
                text: "Search"
            - tapOn:
                id: "omnibarTextInput"
            - inputText: "https://privacy-test-pages.site"
            - pressKey: Enter
            - tapOn:
                id: "omnibarTextInput"
            - eraseText
            - assertVisible:
                text: "Search or type URL"
