appId: com.duckduckgo.mobile.android
androidWebViewHierarchy: devtools
name: "ReleaseTest: Bookmarks can be added and deleted"
tags:
  - releaseTest
---
- retry:
    maxRetries: 3
    commands:
      - launchApp:
          clearState: true
          stopApp: true

      - runFlow: ../shared/skip_all_onboarding.yaml

      - tapOn:
          id: "omnibarTextInput|inputField"
      - inputText: "https://privacy-test-pages.site"
      - pressKey: Enter
      - tapOn:
          id: 'com.duckduckgo.mobile.android:id/browserMenuImageView'
      - assertVisible:
          text: "add bookmark"
      - tapOn:
          text: "add bookmark"
      - tapOn:
          id: 'com.duckduckgo.mobile.android:id/browserMenuImageView'
      - assertVisible:
          text: "bookmarks"
      - tapOn:
          text: "bookmarks"
      - assertVisible:
          text: "Privacy Test Pages - Home"
      - tapOn:
          id: "com.duckduckgo.mobile.android:id/trailingIcon"
      - assertVisible:
          text: "Delete"
      - tapOn:
          text: "delete"
      - assertNotVisible:
          text: "Privacy Test Pages - Home"
      - assertVisible:
          text: "No bookmarks added yet"
